--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "I miss you, I miss you, I miss you."
+description: "I miss you, but I miss you."
 ---
 
 {% for post in paginator.posts %}
