--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is LS."
+title: "About Me"
+description: "Hello, this is LS."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,12 +15,17 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote>
+        <p>
+            欲将心事付瑶琴<br>
+            知音少<br>
+            弦断有谁听
+        </p>
+    </blockquote>
 
-    <p>Hey，我是<strong>LS</strong>，一只程序猿，现在杭州工作。</p>
+    <p>Hello，我是<strong>LS</strong>，一只程序猿，现在杭州工作。</p>
 
-    <p>工作、学习之余，我还是一个象棋爱好者。</p>
+    <p>工作之余，我还是一个象棋爱好者。</p>
     
     <p></p>
     
