--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About Me"
 description: "Hello, this is LS."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/404-bg.jpg"
 ---
 
 <!-- Language Selector -->
